Add ExternalAuthClientType
